custom/themes/hwtc/sass/partials/_banner.scss
.banner {





    background-repeat: no-repeat;
    background-size: cover;
    margin-top: 85px;
    overflow: hidden;
    padding-top: 0px;
    position: relative;
    z-index: 1;
    @include at-breakpoint($desktop) {

        margin-top: 0px;
        padding-bottom: 10px;
        padding-top: 250px;
        .home & {
            padding-bottom: 0px;
        }
    }
    .box-fifty {
        color: $white;
    }
    img {
        left: 0;
        min-height: 200px;
        position: absolute;
        top: 0;
        width: 100%;
    }
    .banner-bottom {




        color: $white;
        float: left;
        margin-top: 0px;
        position: relative;
        width: 100%;
        width: 100%;
        @include at-breakpoint($desktop) {
            margin-top: 150px;
        }
        .box-1 {







            cursor: pointer;
            float: left;
            margin-bottom: -99999px;
            padding-bottom: 99999px;
            padding: 2.5em 2.5em 9999px 0;
            position: relative;
            width: 100%;
            z-index: 1;
            @include at-breakpoint($desktop) {
                padding-left: 3.5em;
                width: 50%;
            }
            &:hover {
                a {

                    color: #f39c12;
                    &:after {
                        background: url(images/box-arrow-hover.png) no-repeat;
                    }
                }
            }
            &:before {


                @include background(linear-gradient(164deg, #f39c12, #f39c12));
                @include opacity(0.9);
                background: #f39c12;
                content: '';
                height: 100%;
                left: 0;
                position: absolute;
                top: 0;
                width: 100%;
                z-index: -1;
            }
            &.box-1:hover:before {


                @include background(linear-gradient(164deg, $white, $white));
                @include opacity(1);
                background: $white;
            }
            p {
                float: left;
                width: 90%;
            }
            a {

                color: $white;
                cursor: pointer;
                display: block;
                padding-bottom: 2em;
                position: relative;
                text-decoration: none;
                &:after {

                    background: url(images/box-arrow.png) no-repeat;
                    content: '';
                    height: 41px;
                    position: absolute;
                    right: 0%;
                    top: 33%;
                    width: 32px;
                    @include at-breakpoint($desktop) {
                        right: 0%;
                    }
                }
            }
        }
        .box-2 {


            @extend .box-1;
            &:before {

                @include background(linear-gradient(164deg, #f1c40f, #f1c40f));
                background: #f1c40f;
            }
            &:hover {
                a {

                    color: #f1c40f;
                    &:after {
                        background-position: -32px 0;
                        background: url(images/box-arrow-hover.png) no-repeat;
                    }
                }
            }
        }
    }
}

.bannertext {



    overflow: hidden;
    position: relative;
    width: 100%;
    @include at-breakpoint($desktop) {
        margin-bottom: 50px;
    }
    .bannertext-content {






        @include opacity(0.9);
        @include transition(opacity 1s linear);
        background: $white;
        color: #555;
        padding: 40px 1.5em 20px;
        position: relative;
        text-transform: uppercase;
        width: 100%;
        @include at-breakpoint($desktop) {
            float: right;
            margin-right: 5%;
            width: auto;
        }
        .banner-title-big {


            @include adjust-font-size-to(30px);
            font-family: $latobold;
            @include at-breakpoint($desktop) {
                @include adjust-font-size-to(40px);
            }
        }
        .banner-title-small {


            @include adjust-font-size-to(16px);
            font-family: $latolight;
            margin-top: 0.8em;
            @include at-breakpoint($desktop) {

                @include adjust-font-size-to(20px);
                margin-top: 0;
            }
        }
    }
}

